fix: fix z-index between cards and overlay panel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,7 @@
                 position: fixed;
                 top: 0;
                 left: 0;
+                z-index: 1000;
 
                 /* Sizing */
                 width: 100%;
